# ABHSS

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  RUN.md
.github/workflows/: linux-ci.yml
data/: generate_queries_for_noGPU4GST.py
data/GPU4GST_DBLP/: dataset_manifest.json
data/GPU4GST_Github/: dataset_manifest.json
data/GPU4GST_LiveJournal/: dataset_manifest.json
data/GPU4GST_Musae/: dataset_manifest.json
data/GPU4GST_Orkut/: dataset_manifest.json
data/GPU4GST_Reddit/: dataset_manifest.json
data/GPU4GST_Twitch/: dataset_manifest.json
data/GPU4GST_Youtube/: dataset_manifest.json
data/hack_dpbf_vs_test4/: Graph.txt  Query.txt
data/official-latest-20260722/dblp-aminer-v18/: build_stats.json  dataset_manifest.json
data/official-latest-20260722/dbpedia-2022.12-en/: dataset_manifest.json  source_normalization.json  source_query_manifest.json
data/official-latest-20260722/imdb-20260722/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/linkedmdb/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/movielens-32m/: dataset_manifest.json
data/official-latest-20260722/snap-github-2019/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/snap-livejournal/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/snap-orkut/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/snap-twitch-2018/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/snap-wikipedia-2018/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/snap-youtube/: dataset_manifest.json  source_normalization.json
data/official-latest-20260722/toronto-current/: build_manifest.json  dataset_manifest.json
data_origin/: DBLP3.csv  DBLP5.csv  DBLP7.csv  Github3.csv  Github5.csv  Github7.csv  LiveJournal3.csv  LiveJournal5.csv  LiveJournal7.csv  Musae3.csv  Musae5.csv  Musae7.csv  OFFICIAL_ONEDRIVE_MANIFEST.json  Orkut3.csv  Orkut5.csv  Orkut7.csv  README.md  Reddit3.csv  Reddit5.csv  Reddit7.csv  SHA256SUMS.txt  TWITCH_SHA256.txt  Youtube3.csv  Youtube5.csv  Youtube7.csv  download_author_data.ps1  verify_data.ps1
data_origin/result/: exp_CPU_nonHop_Musae_T3_0-0.csv
data_sources/official/: README.md
data_sources/official/official-latest-20260722/: download_manifest.json
data_sources/steinlib/: WRP3-source.html  WRP4-source.html  WRP4.tgz
docs/: ABHSS_LIGHT_HEAVY_REFACTOR.md  BASELINE.md  CODE_GUIDE.md  DATA_PROVENANCE.md  EXPERIMENTS.md  EXPERIMENT_PLAN.md  EXPERIMENT_REVIEW_GUIDE.md  FULL_EXPERIMENT_PLAN.md  GPU4GST_DATA.md  METHOD.md  OFFICIAL_DATA_BUILD.md  PROBE_15H_PLAN.md
docs/archive/: ABHSS_CONFIGURATION_REFACTOR.md  BASELINE.md  DATA_PROVENANCE.md  GPU4GST_DATA.md  README.md  THIRD_PARTY.md
experiment_data/controlled/: manifest.csv  manifest.json
experiment_data/controlled/DBLP/: controlled_g10_f1600.txt  controlled_g10_f200.txt  controlled_g10_f400.txt  controlled_g10_f800.txt  controlled_g11_f400.txt  controlled_g12_f400.txt  controlled_g13_f400.txt  controlled_g14_f1600.txt  controlled_g14_f200.txt  controlled_g14_f400.txt  controlled_g14_f800.txt  controlled_g15_f400.txt  controlled_g16_f400.txt  controlled_g4_f400.txt  (+8 more)
experiment_data/gpu4gst_author_panel/: cells.json  selected_queries.csv
experiment_data/gpu4gst_panel/: cells.json  selected_queries.csv  selected_queries.json
experiment_data/p1_published_workloads/: cases.csv  datasets.csv  manifest.json
experiment_data/p2_cross_g/: cells.json  selected_queries.csv  selected_queries.json
experiment_data/practical_original/: manifest.csv  manifest.json
experiment_data/s1_controlled_gf/: cells.csv  cells.json  queries.json
experiment_data/steinlib/: index.csv  index.json
experiments/: README.md  abhss_configuration_refactor_gate.json  correctness_audit.json  data_snapshot.json  data_sources.json  environment_lock.json  graph_identity_audit.json  official_sources.json  paper_matrix.json  probe_15h_plan.json  query_feasibility_audit.json  scip-jack.set
src/: main.cpp
src/abhss/: abhss.h  adjoint.cpp  adjoint.h  core.cpp  core.h  diagnostics.h  dual_cut.h  forward.cpp  forward.h  heavy.cpp  internal.h  light.cpp  pipeline.cpp  pipeline.h  preprocess.cpp  solver.cpp
src/baselines/: basic_plus.cpp  basic_plus.h  gpu4gst_pruneddp.cpp  gpu4gst_pruneddp.h
src/common/: fast_numeric_reader.h  float_compare.h  graph_io.cpp  graph_io.h  memory_usage.cpp  memory_usage.h  output_manager.cpp  output_manager.h  probe_diagnostics.h  query_feasibility.cpp  query_feasibility.h  query_io.cpp  query_io.h
src/dpbf/: dpbf.cpp  dpbf.h
src/pruneddp/: pruneddp.cpp  pruneddp.h
tests/: abhss_configuration_regression.cpp  abhss_variant_regression.cpp  abhss_zero_weight_regression.cpp  graph_io_regression.cpp  mask_vertex_state_regression.cpp  query_io_regression.cpp
tools/: build_external_baselines.py
tools/data/: audit_dataset_snapshot.py  audit_query_feasibility.cpp  build_aminer_dblp_graph.cpp  build_aminer_dblp_graph.py  build_gpu_author_panels.py  build_gpu_query_panels.py  build_imdb_graph.cpp  build_jaccard_graph.cpp  build_linkedmdb_natural_panel.py  build_movielens_graph.cpp  build_official_query_panels.py  build_official_snapshot.py  build_practical_original_panels.py  build_published_workloads.py  build_query_feasibility_audit.py  build_rdf_graph.cpp  build_rdf_query_panels.py  build_toronto_graph.py  compare_graphs.cpp  convert_steinlib.py  download_official_sources.py  english_stopwords.txt  extract_extended_sources.py  extract_imdb_source.py  extract_movielens32m.py  finalize_official_dataset.py  generate_controlled_queries.py  generate_label_frequency_queries.py  prepare_imdb_dataset.py  prepare_official_snap.py  rebuild_official_freeze.py
tools/experiments/: analyze_probe_results.py  audit_probe_run.py  compare_refactor_gate.py  plot_results.py  run_experiments.py  run_probe_15h.py  summarize_results.py  validate_environment.py
tools/gpu4gst_data/: README.md  prepare_gpu4gst.cpp
(+174 files in other folders)
